--- a/css/style.css
+++ b/css/style.css
@@ -312,7 +312,8 @@ section {
   border:4px solid #fefefe;
   border-radius:0;
   box-shadow:0 0 0 1px hsla(0,0%,4%,.2);
-  line-height:0
+  line-height:0;
+  object-fit: cover;
  }
  a.thumbnail {
   transition:box-shadow .2s ease-out
