--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,10 @@ h3 {
 }
 
 h4 {
-  font-size: 1.25em;
+  font-size: 1.35em;
+  font-family: 'Josefin-sans';
+  margin-bottom: 0.5em;
+  margin-top: 0.2em;
 }
 
 body {
@@ -50,10 +53,10 @@ body {
 p {
   font-size: 1.125em;
 }
+
 p.small {
   font-size: 1.5em;
 }
-
 
 h1,
 h2,
@@ -211,6 +214,12 @@ section {
   font-size: 10em;
 }
 
+.devicon-secondary {
+  font-size: 5em;
+  margin: 0 auto;  
+  width:50%;
+}
+
 .grow {
   transition: all .2s ease-in-out;
 }
@@ -243,7 +252,7 @@ section {
 #projects .card img {
   width: 100%;
   height: 9.375em;
-  border: 2px solid #FDCD3B;
+  border: 2px solid #52647e;
 }  
 
 
@@ -259,10 +268,19 @@ section {
   border-radius: 0.375em;
   transition:all .1s ease-in;
   min-height:28.625em;
-  max-height:28.625em;
+  max-height:30.625em;
   min-width: 20em;
   max-width: 20em;
   display: inline-block;
+}
+.card-desc {
+  font-family: 'Proxima Nova Soft', 'Helvetica Neue', sans-serif;
+  font-size: 0.85em;
+  font-weight: 400;
+  margin-bottom: 1rem;
+  text-rendering: optimizeLegibility;
+  line-height: 1.5em;
+  color: #2c2929
 }
 
 /* On mouse-over, add a deeper shadow */
@@ -328,3 +346,44 @@ section {
 #stack .devicon-javascript-plain {
   color:#FDCD3B
  }
+
+.label {
+  text-align: center;
+  color: black;
+  padding: .33333rem .5rem;
+  font-size: .8em;
+  /* border-radius: 15px;
+  border: 2px solid #FDCD3B */
+}
+
+.label>.devicon {
+   font-size: 1em; 
+}
+
+.card-links {
+  display: flex;
+  justify-content: center;
+  font-size: .8em;
+}
+
+.card-tags {
+  display: flex;
+  justify-content: center;
+  margin-top: 0.5em;
+}
+button {
+  color: #f5f5f5;
+  text-decoration: none;
+  background-color: #52647e;
+  border-radius: .5em;
+  /* box-shadow: .05em .5em .2em 0 rgba(0,0,0,0.5); */
+}
+
+button:hover {
+  color: #FDCD3B;
+  background-color: #4b75b1;
+}
+
+a {
+  text-decoration: none;
+}
